Update : Prepare Base Model - Required files are created

--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,25 @@
-key: value
+# Configuration for training a neural network model, possibly using VGG16 architecture
+
+# Set whether data augmentation will be applied during training
+AUGMENTATION: True
+
+# Define the dimensions of the input images (224x224 pixels with 3 color channels)
+IMAGE_SIZE: [224, 224, 3] 
+
+# Number of training examples processed in one iteration
+BATCH_SIZE: 16
+
+# Specify whether to include the fully connected layers of the VGG16 model
+INCLUDE_TOP: False
+
+# Number of training epochs (1 epoch = 1 pass through the entire dataset)
+EPOCHS: 1
+
+# Number of classes in the classification task (binary classification with 2 classes)
+CLASSES: 2
+
+# Initialize the model's weights with pre-trained weights from the ImageNet dataset
+WEIGHTS: imagenet
+
+# Learning rate used for updating the model's weights during training
+LEARNING_RATE: 0.01
