--- a/config/config.yaml
+++ b/config/config.yaml
@@ -15,3 +15,9 @@ prepare_base_model:
   root_dir: artifacts/prepare_base_model
   base_model_path: artifacts/prepare_base_model/base_model.h5
   updated_base_model_path: artifacts/prepare_base_model/base_model_updated.h5
+
+#YAML configuration for model_traing
+
+training:
+  root_dir: artifacts/training
+  trained_model_path: artifacts/training/model.h5
